remove max-width on topbar menu to prevent name wrapping

--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -89,7 +89,6 @@ summary {
   position: absolute;
   right: 0;
   min-width: 50px;
-  max-width: 20vw;
 
   /* will toggle to block */
   display: none;
